# diatribe

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  requirements.md
src/: lib.rs  main.rs
src/heuristics/: backchannels.rs  floor_holding.rs  micro_turns.rs  mod.rs
src/io/: input.rs  output.rs
src/llm/: client.rs  mod.rs  prompts.rs  speaker_id_prompt.rs  validation.rs
src/models/: deepgram.rs  mod.rs  patch.rs  speaker_id.rs  token.rs  window.rs
src/stages/: mod.rs  stage0_normalize.rs  stage1_llm_edit.rs  stage2_reconcile.rs  stage3_render.rs  stage_speaker_id.rs
